wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_category.rs
use wallet_common::error_category::ErrorCategory;

#[derive(ErrorCategory)]
#[allow(dead_code)]
enum Error {
    #[category(invalid)]
    Invalid,
}

fn main() {}
